[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/eim/ui/EIMGroups/EIMGroups.gd" type="Script" id=1]

[node name="EIMGroups" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Groups" type="VBoxContainer" parent="."]
margin_right = 933.0
margin_bottom = 1080.0
size_flags_horizontal = 3

[node name="GroupCreator" type="HBoxContainer" parent="Groups"]
margin_right = 933.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Groups/GroupCreator"]
margin_top = 5.0
margin_right = 92.0
margin_bottom = 19.0
text = "Create Group: "

[node name="LineEdit" type="LineEdit" parent="Groups/GroupCreator"]
margin_left = 96.0
margin_right = 892.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "New Group Name"

[node name="AddGroup" type="Button" parent="Groups/GroupCreator"]
margin_left = 896.0
margin_right = 933.0
margin_bottom = 24.0
disabled = true
text = "Add"

[node name="Tree" type="Tree" parent="Groups"]
margin_top = 28.0
margin_right = 933.0
margin_bottom = 1080.0
size_flags_vertical = 3

[node name="Operations" type="VBoxContainer" parent="."]
margin_left = 937.0
margin_right = 982.0
margin_bottom = 1080.0

[node name="Button" type="Button" parent="Operations"]
margin_right = 45.0
margin_bottom = 20.0
text = "STUB"

[node name="Inputs" type="VBoxContainer" parent="."]
margin_left = 986.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3

[node name="Refresh" type="HBoxContainer" parent="Inputs"]
margin_right = 934.0
margin_bottom = 20.0

[node name="Control" type="Control" parent="Inputs/Refresh"]
margin_right = 870.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="Inputs/Refresh"]
margin_left = 874.0
margin_right = 934.0
margin_bottom = 20.0
text = "Refresh"

[node name="ItemList" type="ItemList" parent="Inputs"]
margin_top = 24.0
margin_right = 934.0
margin_bottom = 152.0
rect_min_size = Vector2( 0, 128 )

[connection signal="pressed" from="Inputs/Refresh/Button" to="." method="_on_inputs_refresh_pressed"]
